<resources>
    <string name="app_name">M-Banking</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="newUser">User Registration</string>
    <string name="hint_accno">Account Number</string>
    <string name="hint_fName">Enter First Name</string>
    <string name="hint_lName">Enter Last Name</string>
    <string name="hint_pin">pin</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_back"> Back </string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_exit">EXIT</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="homePage">M-Banking Services</string>
    <string name="btn_deposit">Deposit</string>
    <string name="btn_balanceEnq">Balance Enq</string>
    <string name="btn_stopCheque">Stop Cheque</string>
    <string name="btn_changePin">Change Pin</string>
    <string name="btn_finTip">Financial Tips</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount: </string>
    <string name="hint_amount">Deposit Amount</string>
    <string name="hint_chequeNo">Enter Cheque Number</string>
    <string name="chequeNo">Cheque No.</string>
    <string name="stopCheque">Stop Cheque</string>
    <string name="balanceEnq">Balance Enquiry</string>
    <string name="accno">A/C No;</string>
    <string name="name">Name;</string>
    <string name="hint_name">Name here</string>
    <string name="balance">Balance;</string>
    <string name="changePin">Change Pin</string>
    <string name="oldPin">Old Pin;</string>
    <string name="newPin">New Pin;</string>
    <string name="hint_newPin">New Pin</string>
    <string name="hint_oldpin">Old Pin</string>
    <string name="finTip">Financial Tip</string>
    <string name="tip">Banks have been known to fail. Hide your money under your bed or invest</string>

</resources>
