<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newUser"
        android:id="@+id/textView"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:hint="@string/hint_fName"
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/lName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:hint="@string/hint_lName"
        android:inputType="text"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/accno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="italic"
        android:hint="@string/hint_accno"
        android:inputType="number"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/pin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textStyle="italic"
        android:gravity="center"
        android:hint="@string/hint_pin"
        android:inputType="numberPassword"
        android:padding="10dp"
        android:singleLine="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- Submit Button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btnSubmit" />

        <!-- Back Button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btnBack" />
    </LinearLayout>

</LinearLayout>