<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:text="@string/deposit"
        android:textSize="30dp"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.16" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/amount"
            android:textSize="20dp"
            android:id="@+id/textView4" />

        <EditText
            android:id="@+id/amount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="italic"
            android:hint="@string/hint_amount"
            android:inputType="number"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="20dp"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- Submit Button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btnSubmit" />

        <!-- Back Button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btnBack" />
    </LinearLayout>

</LinearLayout>