<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:text="@string/balanceEnq"
        android:textSize="30dp"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.02" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/accno"
            android:textSize="20dp"
            android:id="@+id/textView8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="20dp"
            android:id="@+id/accno" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="20dp"
            android:id="@+id/textView9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/name"
            android:textSize="20dp"
            android:id="@+id/name" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.03"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/balance"
            android:textSize="20dp"
            android:id="@+id/textView10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="20dp"
            android:id="@+id/balance" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- Back Button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btnBack" />
    </LinearLayout>

</LinearLayout>