<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <TextView
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:text="@string/finTip"
        android:textSize="30dp"
        android:id="@+id/textView15"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="378dp"
            android:text="@string/tip"
            android:textSize="20dp"
            android:id="@+id/textView16" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <!-- Back Button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btnBack" />
    </LinearLayout>

</LinearLayout>